--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 }
 </script>
 </head>
-  <body>
+  <body><script type="module" src="/index.tsx"></script>
     <div id="root"></div>
   </body>
 </html>
